Fix image layout shift in play game

--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -406,6 +406,7 @@ body {
 
     &__image {
         border-radius: 5px;
+        height: 300px;
     }
 
     &__image img {
